fix: hide scrollbar in match div for improved UI experience

--- a/django/static/css/main/profile.css
+++ b/django/static/css/main/profile.css
@@ -299,6 +299,9 @@
         overflow: hidden;
         overflow-x:scroll;
     }
+    .match .match-div::-webkit-scrollbar {
+        display: none;
+    }
 
     .match .players-div {
         flex: 3;
